2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfcolor.[ch]: Drop unused pdf_color_set_default().

	* pdfdev.h: Drop pdf_dev_setfont() and pdf_dev_set_colormode().

	* pdfdoc.[ch]: Drop unused pdf_doc_{end,make}_article().
	Declare pdf_doc_get_mediabox() as static.

	* pdfdraw.h: Drop pdf_dev_{fill,eofill,stroke,fillstroke}(), and
	pdf_dev_grestoreall().

	* pdfnames.[ch]: Declare printable_key() as static.

	* pdfximage.h: Drop pdf_ximage_disable_ebb().

	* tfm.[ch]: Drop tfm_get_space(). Skip tfm_string_{depth,height}.

	* tt_table.[ch]: Declare tt_get_name() as static.

2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cff.[ch]: Declare cff_match_string() as static.
	* cff.h: Drop unused '#define cff_is_stdstr(s)'.

	* cid.[ch]: Declare CIDFont_new(), CIDFont_release(),
	CIDFont_flush(), and CIDFont_cache_init() as static.

	* cmap.[ch]: Declare CMap_match_codespace() as static.
	* cmap_write.h: Put '#if 0...#endif' around Map_ToCode_stream().

2015-08-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* agl.[ch]: Declare agl_load_listfile() as static.

	* cff_types.h: Drop unused type l_size.

	* dpxutil.[ch]: Extern sputx(), getxpair(), putxpair(),
	ostrtouc(), and esctouc() moved from here ...
	* cmap_write.c: ... to here or ...
	* pst_obj.c: ... to here as static.

2015-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mpost.[ch]: Extern check_for_mp() moved from here ...
	* pdfximage.c: ... to here as static.

2015-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Introduce a new static function static int is_notdef_notzero()
	to fix the support of native type1 fonts. The t1disasm is required.
	The fix is intended as an intermediate one until more fine fix is given.

2015-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c: Better detection of bad (inconsistent) DVI files.
	* xdvipdfm-bad.test: New shell script to test bad DVI files.
	* tests/ids_2_6.dvi, tests/ids_3_2.dvi, tests/ids_a_b.dvi,